infra/k8s/reloto-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloto-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reloto-auth
  template:
    metadata:
      labels:
        app: reloto-auth
    spec:
      containers:
        - name: reloto-auth
          image: conorburke/reloto-auth
---
apiVersion: v1
kind: Service
metadata:
  name: reloto-auth-srv
spec:
  type: ClusterIP
  selector:
    app: reloto-auth
  ports:
    - name: reloto-auth
      protocol: TCP
      port: 3000
      targetPort: 3000
