infra/k8s/reloto-orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloto-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reloto-orders
  template:
    metadata:
      labels:
        app: reloto-orders
    spec:
      containers:
        - name: reloto-orders
          image: conorburke/reloto-orders
---
apiVersion: v1
kind: Service
metadata:
  name: reloto-orders-srv
spec:
  type: ClusterIP
  selector:
    app: reloto-orders
  ports:
    - name: reloto-orders
      protocol: TCP
      port: 3000
      targetPort: 3000
