infra/k8s/reloto-payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloto-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reloto-payments
  template:
    metadata:
      labels:
        app: reloto-payments
    spec:
      containers:
        - name: reloto-payments
          image: conorburke/reloto-payments
---
apiVersion: v1
kind: Service
metadata:
  name: reloto-payments-srv
spec:
  type: ClusterIP
  selector:
    app: reloto-payments
  ports:
    - name: reloto-payments
      protocol: TCP
      port: 3000
      targetPort: 3000
