infra/k8s/reloto-tools-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reloto-tools-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reloto-tools
  template:
    metadata:
      labels:
        app: reloto-tools
    spec:
      containers:
        - name: reloto-tools
          image: conorburke/reloto-tools
---
apiVersion: v1
kind: Service
metadata:
  name: reloto-tools-srv
spec:
  type: ClusterIP
  selector:
    app: reloto-tools
  ports:
    - name: reloto-tools
      protocol: TCP
      port: 3000
      targetPort: 3000
