infra/k8s/tools-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tools-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tools-mongo
  template:
    metadata:
      labels:
        app: tools-mongo
    spec:
      containers:
        - name: tools-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: reloto-tools-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: tools-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
