infra/k8s/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: reloto.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: reloto-auth-srv
              servicePort: 3000
          - path: /api/tools/?(.*)
            backend:
              serviceName: reloto-tools-srv
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: reloto-orders-srv
              servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: reloto-payments-srv
              servicePort: 3000
          # - path: /?(.*)
          #   backend:
          #     serviceName: client-srv
          #     servicePort: 3000
